Meu Primeiro Código HTML e na versão 1.1

--- a/curriculo.html
+++ b/curriculo.html
@@ -3,41 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Currículo</title>
+    <title>Currículo HTML</title>
 </head>
 <body>
     <header>
-        <h1>Meu Currículo</h1>
-        <p>Este é o meu currículo.</p>    
+        <h1>Meu Currículo</h1> 
     </header>
 
     <section class="info">
         <h2>Informações Pessoais:</h2>
-        <h3>Nome: Anthonny Soares</h3>
-        <h3>Idade: 22</h3>
-        <h3>Estado Civil: Solteiro</h3>
-        <h3>Endereço: Rua Bolívia, Bairro Nova - Aracaju-Se</h3>
+        <ul>
+            <li><strong>Nome:</strong> Anthonny Soares</li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/Thonnedev/" target="_blank">Github</a></li>
+            <li><strong>E-mail:</strong> <a href="mailto:anthonny.devsoares03@gmail.com">Enviar E-mail</a></li>
+            <li><strong>Idade:</strong> 22</li>
+            <li><strong>Estado Civil:</strong> Solteiro</li>
+            <li><strong>Endereço:</strong> Rua Bolívia, Cidade Nova - Aracaju-SE</li>
+        </ul>
     </section>
-<br>
+
 
     <section class="formacao">
         <h2>Formação Acadêmica:</h2>
-        <h3>Ensino Médio: Completo</h3>
-        <h3>Ensino Superior: Cursando Bacharelado em Engenharia de Software</h3>
+        <ul>
+            <li><strong>Ensino Médio:</strong> Completo</li>
+            <li><strong>Ensino Superior:</strong> Cursando Bacharelado em Engenharia de Software</li>
+        </ul>
     </section>
-<br>    
+    
     <section class="formacao">
         <h2>Formação Complementar:</h2>
-        <h3>Desenvolvedor FullStack - FreeCodeCamp</h3>
-        <h3>JavaScript - Udemy</h3>
+        <ul>
+            <li>FullStack - FreeCodeCamp</li>
+        </ul>
     </section>
-<br>
+
     
     <section class="experiencia">
         <h2>Experiência Profissional:</h2>
-        <h3>Auxiliar de T.I - Almaviva - Atual</h3>
-        <h3>Desenvolvedor Web - Freelancer - 7 meses</h3>
-        <h3>Programador JavaScript - Freeleancer - 3 meses</h3>
+        <ul>
+            <li>Estudante de Engenharia de Software<br>2 meses</li>
+            <li>Estudante no Desenvolvimento FullStack<br>1 mês</li>
+        </ul>
     </section>
+
+   
 </body>
 </html>
