--- a/curriculo.html
+++ b/curriculo.html
@@ -47,6 +47,14 @@
         </ul>
     </section>
 
+    <!--section class="habilidades">
+        <h2>Habilidades:</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ul>
+    </section-->
    
 </body>
 </html>
